# Book-Recommender

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: hf_sync.yml
chroma_db/: chroma.sqlite3
chroma_db/42890111-745d-4f30-8688-7c4bfe8d743a/: index_metadata.pickle
