[project]
name = "book-recommender"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "gradio>=6.20.0",
    "langchain>=1.3.14",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.4.0",
    "numpy>=2.5.1",
    "openai>=2.46.0",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
]
